[FIX] web: improve some spacing issues in o_input_box elements
This commit reduces some padding unnecessary when elements with the
o_input_box class is present outside of the form view. This reduces
for example the space between the first overlay icon and the field
content in the datetime field on kanban cards. A test has been
introduced to make sure the right padding value is calculated to
set the padding around elements in fields, with custom overlays
width and a general padding set around them (as it is the case for
the mobile form view).

Also, the vertical padding is only applied on form views on touch
devices, where the inputbox is designed to be used with more padding
around the elements.

Finally, a redundant css rule for labels has been removed, since we
don't want to select radio/checkbox o_form_label elements.

task-6011668

--- a/addons/web/static/src/core/input_box/input_box.scss
+++ b/addons/web/static/src/core/input_box/input_box.scss
@@ -14,11 +14,6 @@
     --inputbox-inner-padding-start: calc((1.5 * var(--inputbox-overlay-padding-x)) + var(--inputbox-overlay-padding-prefix));
     --inputbox-inner-padding-end: calc(var(--inputbox-overlay-padding-x) + var(--inputbox-overlay-padding-suffix)) + var(--inputbox-overlay-padding-toggler);
 
-    &:is(.o_touch_device .o_input_box) {
-        --inputbox-overlay-padding-x: var(--inputbox-spacing-unit);
-        --inputbox-overlay-padding-y: calc(var(--border-width) + 2.25 * var(--inputbox-spacing-unit) - var(--inputbox-overlay-size) / 2);
-    }
-
     &:has(.o_dropdown_button) {
         --inputbox-overlay-padding-toggler: calc(var(--inputbox-overlay-padding-x) + (2 * var(--inputbox-spacing-unit)));
 
